# RS-Improved-Menetrendekhu

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  realtime_check.txt
crates/app/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
crates/app/src/: input.css  layout.rs  lib.rs  main.rs
crates/app/src/components/: connection_card.rs  departure_board.rs  feature_cards.rs  mod.rs  navigation.rs  page_header.rs  search_panel.rs  stop_search.rs  summary_tiles.rs
crates/app/src/pages/: home.rs  map.rs  mod.rs  results.rs  stop.rs
crates/app/static/: tailwind.css
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  queries.rs
crates/gtfs/: Cargo.toml  build.rs
crates/gtfs/proto/: gtfs-realtime.proto
crates/gtfs/src/: ingest.rs  lib.rs  realtime.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  routes.rs  state.rs  ws.rs
migrations/: 0001_initial.sql
public/: bus-tracker.css  map.js
