[workspace]
members = [
    "crates/server",
    "crates/app",
    "crates/gtfs",
    "crates/realtime",
    "crates/db",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace"] }

# Leptos
leptos = { version = "0.7", features = ["nightly"] }
leptos_axum = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# GTFS-RT (protobuf)
prost = "0.13"
prost-types = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing (for GTFS static)
csv = "1"
zip = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
