[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }
zip = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13"
