[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
gtfs = { path = "../gtfs" }
db = { path = "../db" }
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
