[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"] }
db = { path = "../db" }
gtfs = { path = "../gtfs" }
realtime = { path = "../realtime" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
